<resources>
  <string name="app_name">Elite Mobile</string>
</resources>